# immer-in-bewegung

./: CNAME  Cargo.toml  LICENSE  README.md  about.html  bewegung.css  bewegung.html  bewegung.json  cloudbeaver.md  coordinate-tool.html  dataset.html  images.html  index.html  input-tool.html  manifest.json  map.html  overview.html  report.html  search.html  server_db_path.txt  service-worker.js  setup.html  source.html  statistics.html  sw.js  trip.html  version
bundle/codemirror/: source.txt  (+1 more)
components/: footer.html  iibCharts.js  iibMaps.js  iibQueries.js  manifest.js  menu.html  statisticsChart.js
extra/: json2sqlite.html  json_import_one_trip.sql  json_input_without_settings.sql  json_output.sql
languages/: danish.json  english.json  swedish.json
personal/: bewegung.db  danish.json  dutch.json  french.json  german.json  languages.txt  settings.json  swedish.json
pkg/: bewegung.d.ts  bewegung.js  bewegung_bg.js  bewegung_bg.wasm.d.ts
queries/: common_participant_groups.sql  common_trip_domains.sql  explore.sql  images_date_list.sql  images_photo_time.sql  search_event.sql  search_trip.sql
script/: bew-chart.js  bew-filter.js  bew-immich.js  bew-map.js  bew-tabulator.js  bew-toolbox-input.js
src/: filecontent.rs  helper.rs  lib.rs  render.rs  sqlite_query.rs
templates/: _menu.tera  about.tera  dataset.tera  explore.tera  images.tera  map.tera  overview_country.tera  overview_plain.tera  overview_year.tera  search.tera  source.tera  statistics_overnights.tera  statistics_summary.tera  statistics_themes.tera  statistics_visits.tera  trip.tera
(+29 files in other folders)
