[package]
name = "bewegung"
description = "Travel documentation application"
license = "MIT"
version = "3.0.0"
edition = "2021"
repository = "https://github.com/plans-coding/"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = false

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Response",
    "Url",
    "UrlSearchParams",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "Event",

    # Select & options
    "HtmlSelectElement",
    "HtmlOptionsCollection",
    "HtmlOptionElement",

    # URL + History
    "Url",
    "History",
    "Location",
] }
js-sys = "0.3"
# beroende nedan till CONSOLE
opfs-project = "0.1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sqlite-wasm-rs = { version = "0.4.8", default-features = false, features = ["precompiled"] }
opfs = "0.1.4"
chrono = "0.4.42"
tera = "1.20.1"
getrandom = { version = "0.2", features = ["js"] }
urlencoding = "2.1"
once_cell = {version = "1.21.3", default-features = false }
serde-wasm-bindgen = "0.6.5"
regex = "1.12.2"
console_error_panic_hook = "0.1.7"
indexmap = { version = "2.13.0", features = ["serde"] }
